fix overlap in section 3

--- a/css/main.less
+++ b/css/main.less
@@ -1334,26 +1334,35 @@ html, body {
             }
 
             .clients-container {
-                position: absolute;
-                padding: 80px;
+                padding: 20px;
                 width: 100%;
-                max-width: 1100px;
-                top: 50%;
-                left: 50%;
-                .transform(translate(-50%, -50%));
+
+                @media(min-width: 1250px) { 
+                    padding: 80px;                   
+                    position: absolute;
+                    max-width: 1100px;
+                    top: 50%;
+                    left: 50%;
+                    .transform(translate(-50%, -50%));
+                }
 
                 .clients {
                     display: table;
                     width: 100%;
 
                     .col {
-                        text-align: center;
+                        text-align: center;                       
+                        padding: 0 15px;
+
+                        @media(min-width: 720px) {
+                            display: inline-block;
+                            width: 50%;
+                            vertical-align: top;  
+                        }
 
                         @media(min-width: 1250px) {
                             display: table-cell;
                             width: 25%;
-                            vertical-align: top;                      
-                            padding: 0 15px;
 
                             text-align: left;
                         }
